--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
 
+<head>
+  <!-- needed by cordova and i-things -->
+  <meta http-equiv="Content-Security-Policy" content="default-src * file: ws: wss: gap: 'unsafe-inline' 'unsafe-eval'; img-src * data: blob: http: https: file:">
+  <!-- better on mobile -->
+  <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
+  <!-- since cordova serves from file:// we shall help it on encoding isues -->
+  <meta charset="UTF-8">
+  <title>Red Line Finance</title>
 </head>
+
 <body>
   <div id="app"></div>
   <script type="text/javascript" src="build.js"></script>
 </body>
+
 </html>
