--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <!-- since cordova serves from file:// we shall help it on encoding isues -->
   <meta charset="UTF-8">
   <title>Red Line Finance</title>
-  <!-- TODO solve this with browserify -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <!-- TODO solve this with browserify // solved! npm install material-design-icons-iconfont -->
+  <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">-->
 </head>
 
 <body>
